# freeseat-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.sh  coords.json  find_routes_match_draft.sql  newrelic.ini  pyproject.toml  pytest.ini
.github/workflows/: docker-build.yml  test.yml.disabled  test_and_build.yml
app/: conftest.py  manage.py
app/apps/: urls.py
app/apps/accounts/: urls.py
app/apps/accounts/admin/: __init__.py  contact_information.py  languages.py  user_sessions.py  users.py
app/apps/accounts/api/: __init__.py  languages.py  user_sessions.py
app/apps/accounts/migrations/: 0001_initial.py  0002_usersession_language_historicallanguage.py  0003_remove_usersession_user.py  0003_usersession_last_active_at_and_more.py  0004_alter_historicaluser_password_alter_user_password.py  0005_contactinformation_historicalcontactinformation.py  0006_alter_language_created_by.py  0007_historicallanguage_name_de_language_name_de.py  0008_alter_contactinformation_first_name_and_more.py
app/apps/accounts/models/: __init__.py  contact_information.py  languages.py  user_sessions.py  users.py
app/apps/accounts/serializers/: __init__.py  contact_information.py  languages.py  user_sessions.py
app/apps/accounts/services/: __init__.py  user_sessions.py
app/apps/accounts/tests/: languages_test.py  user_sessions_test.py
app/apps/accounts/translation/: __init__.py  contact_information.py  languages.py  users.py
app/apps/articles/: urls.py
app/apps/articles/admin/: __init__.py  articles.py
app/apps/articles/api/: __init__.py  articles.py
app/apps/articles/migrations/: 0001_initial.py  0002_article_content_de_article_name_de_and_more.py
app/apps/articles/models/: __init__.py  articles.py
app/apps/articles/serializers/: __init__.py  articles.py
app/apps/articles/tests/: articles_test.py
app/apps/articles/translation/: __init__.py  articles.py
app/apps/comments/admin/: __init__.py  comments.py
app/apps/comments/migrations/: 0001_initial.py
app/apps/comments/models/: __init__.py  comments.py
app/apps/comments/translation/: __init__.py  comments.py
app/apps/logs/: apps.py
app/apps/logs/admin/: __init__.py  trip_request_search_logs.py
app/apps/logs/migrations/: 0001_initial.py
app/apps/logs/models/: __init__.py
app/apps/operations/: apps.py  urls.py
app/apps/operations/admin/: __init__.py  languages.py  messages.py  tickets.py
app/apps/operations/api/: __init__.py  languages.py  messages.py  status.py
app/apps/operations/migrations/: 0001_initial.py  0002_language_historicallanguage.py  0003_historicallanguage_name_de_language_name_de.py  0004_remove_language_created_by_delete_historicallanguage_and_more.py  0005_message.py
app/apps/operations/models/: __init__.py  languages.py  messages.py  tickets.py
app/apps/operations/serializers/: __init__.py  languages.py  messages.py
app/apps/operations/tests/: languages_test.py
app/apps/operations/translation/: __init__.py  languages.py  tickets.py
app/apps/places/: urls.py
app/apps/places/admin/: __init__.py  categories.py  countries.py  places.py  (+1 more)
app/apps/trips/: apps.py  enums.py  urls.py  urls_outdated.py
app/core/: asgi.py  wsgi.py
app/core/settings/: __init__.py  django.py  modeltranslation.py  restframework.py  sentry.py
app/fixtures/places/: poi_categories.json  points_of_interest.json
deployment/: Dockerfile  docker-compose.yml  init_db.sh  init_letsencrypt.sh
deployment/fe/: nginx.conf
fixtures/places/: points_of_interst.json
nginx/: nginx.conf
(+113 files in other folders)
