[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Starter template for Django projects"
authors = ["Alex Rozum <rozumalex@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
djangorestframework = "^3.13.1"
django-filter = "^21.1"
django-simple-history = "^3.0.0"
django-modeltranslation = "^0.17.3"
djangorestframework-gis = "^0.18"
Pillow = "^9.0.0"
drf-spectacular = "^0.21.1"
django-picklefield = "^3.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
commitizen = "^2.20.4"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
